[package]
name = "fonv_cracker"
version = "0.1.0"
authors = ["Scott Munro <scottnmunro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snm_simple_file = { git = "https://github.com/scottnm/snm_simple_file", branch = "main" }
text_io = "0.1.8"
pancurses = "0.16.1"
rand = { version = "0.7.0", features = ["small_rng"] }
static_assertions = "1.1.0"
